# Django_site

marketplace_server/: .env.example  .gitignore  README.md  pyproject.toml
marketplace_server/marketplace/: celery.py  settings.py  urls.py  views.py
marketplace_server/orders/: admin.py  cart.py  context_proccessors.py  forms.py  models.py  urls.py  views.py
marketplace_server/orders/migrations/: 0001_initial.py
marketplace_server/orders/templates/: cart.html  checkout.html  order.html
marketplace_server/products/: admin.py  context_proccessors.py  forms.py  models.py  tasks.py  urls.py  utils.py  views.py
marketplace_server/products/fixtures/: categories.json  product_items.json  products.json  reviews.json  sellers.json
marketplace_server/products/migrations/: 0001_initial.py  0002_seller_review_productitem.py  0003_alter_productitem_product.py  0003_category_description_category_is_preferred.py  0003_productimage.py  0004_alter_productimage_image.py  0004_merge_20231205_0925.py  0005_merge_20231208_0755.py  0005_product_created_at_product_updated_at.py  0005_product_is_limited_edition.py  0006_alter_productimage_product.py  0006_merge_20231215_1437.py  0006_merge_20231218_0851.py  0007_merge_20231220_1711.py  0007_product_is_daily_special.py  0008_merge_20231226_1724.py  0008_merge_20231229_1111.py  0009_merge_20240103_1356.py  0010_alter_review_product.py  0011_alter_review_product.py  (+2 more)
marketplace_server/templates/: base.html  email-verification-success.html  index.html
marketplace_server/users/: admin.py  forms.py  models.py  urls.py  views.py
(+24 files in other folders)
